--- a/apps/qrcode/custom.html
+++ b/apps/qrcode/custom.html
@@ -345,7 +345,9 @@
                 content = document.getElementById("description").value;
             }
             var img = imageconverter.canvastoString(document.getElementsByTagName("canvas")[0],{mode:"1bit",output:"string",compression:true});
-            var app = `var img = ${img};
+            var app = `const storage = require('Storage');
+var qrData = storage.readJSON('qrcode.json', 1);
+var img = ${img};
 ${ document.getElementById("preventBrightnessChangeOnTouch").checked ? '' : `var backlight = 0;
 Bangle.on('touch', function(button, xy) {
   backlight += 0.3;
@@ -361,10 +363,11 @@ g.clear(1).setColor(1,1,1).setBgColor(0,0,0);
 g.fillRect(0,0,g.getWidth()-1,g.getHeight()-1);
 g.drawImage(img,(g.getWidth()-img[0])/2,(g.getHeight()-img[1])/2);
 ${ document.getElementById("hideDescription").checked ? '' : `g.setFontAlign(0,0).setFont("6x8").setColor(0,0,0);
-g.drawString(content,g.getWidth()/2,g.getHeight()-(g.getHeight()-img[1])/4);
+g.drawString(qrData.description,g.getWidth()/2,g.getHeight()-(g.getHeight()-img[1])/4);
 `}
 g.setColor(1,1,1);
 `;
+
             sendCustomizedApp({
                 storage:[{name:"qrcode.app.js", url:"app.js", content:app},]
             });
