--- a/apps/qrcode/custom.html
+++ b/apps/qrcode/custom.html
@@ -368,8 +368,13 @@ g.drawString(qrData.description,g.getWidth()/2,g.getHeight()-(g.getHeight()-img[
 g.setColor(1,1,1);
 `;
 
+            var userSettings = `{"description":${JSON.stringify(content)}}`;
+
             sendCustomizedApp({
-                storage:[{name:"qrcode.app.js", url:"app.js", content:app},]
+                storage:[
+		    {name:"qrcode.app.js", url:"app.js", content:app},
+		    {name:"qrcode.json", url:"qrcode.json", content:userSettings},
+		]
             });
 
         });
