--- a/apps/qrcode/custom.html
+++ b/apps/qrcode/custom.html
@@ -369,9 +369,9 @@ g.setColor(1,1,1);
 `;
 
             var userSettings = `{
-                "description":${JSON.stringify(content)},
-                "qrCodeImg":${img}
+                "description":${JSON.stringify(content)}
 	    }`;
+                //"qrCodeImg":${img}
 
             sendCustomizedApp({
                 storage:[
