--- a/apps/qrcode/custom.html
+++ b/apps/qrcode/custom.html
@@ -349,9 +349,11 @@
 		console.log(img)
 		console.log("otuput of raw imgcon and bToA")
 		console.log(btoa(imageconverter.canvastoString(document.getElementsByTagName("canvas")[0],{mode:"1bit",output:"raw",compression:true})))
+            var imgStr = btoa(imageconverter.canvastoString(document.getElementsByTagName("canvas")[0],{mode:"1bit",output:"raw",compression:true}))
             var app = `const storage = require('Storage');
 var qrData = storage.readJSON('qrcode.json', 1);
 var img = ${img};
+var imgTest = require("heatshrink").decompress(atob(${imgStr}));
 ${ document.getElementById("preventBrightnessChangeOnTouch").checked ? '' : `var backlight = 0;
 Bangle.on('touch', function(button, xy) {
   backlight += 0.3;
@@ -374,6 +376,7 @@ g.setColor(1,1,1);
 
             var userSettings = `{
                 "description":${JSON.stringify(content)}
+                "qrCodeImg":${imgStr}
 	    }`;
                 //"qrCodeImg":${img}
 
