add dewbug message for device width and height as it sometimes makes qr code too big

--- a/apps/qrcode/custom.html
+++ b/apps/qrcode/custom.html
@@ -276,6 +276,7 @@
             }
 
             targetSize = Math.min(deviceWidth - border, deviceHeight - border);
+            console.info("deviceWidth: " + deviceWidth + " deviceHeight: " + deviceHeight + " border: " + border);
             console.info("Targetsize: " + targetSize);
             var finalSizeQr=targetSize;
             var finalSizeCanvas=targetSize;
