split app code into static file. removed upload of it form html, didn't delete app code yet from html

--- a/apps/qrcode/custom.html
+++ b/apps/qrcode/custom.html
@@ -381,8 +381,7 @@ var userSettings = `{"description":${JSON.stringify(qrDescription)}, "qrCodeImgS
 
             sendCustomizedApp({
                 storage:[
-		    {name:"qrcode.app.js", url:"app.js", content:app},
-		    {name:"qrcode.json", url:"qrcode.json", content:userSettings},
+		    {name:"qrcode.json", url:"qrcode.json", content:userSettings}
 		]
             });
 
