removed custom app code from custom.html

--- a/apps/qrcode/custom.html
+++ b/apps/qrcode/custom.html
@@ -348,37 +348,10 @@
             //var img = imageconverter.canvastoString(document.getElementsByTagName("canvas")[0],{mode:"1bit",output:"string",compression:true});
             // eval(qrData.img); does work, as quick as previous way, but I don't love using eval(), so going to hack the string apart a bit, see next line
             var imgStr = btoa(imageconverter.canvastoString(document.getElementsByTagName("canvas")[0],{mode:"1bit",output:"raw",compression:true}));
-            var app = `const storage = require('Storage');
-var qrData = storage.readJSON('qrcode.json', 1);
-var qrImg = require("heatshrink").decompress(atob(qrData.qrCodeImgStr));
-var backlight = 0;
-if (!qrData.preventBrightnessChangeOnTouch) {
-  Bangle.on('touch', function(button, xy) {
-    backlight += 0.3;
-    if (backlight > 1) backlight = 0;
-    Bangle.setLCDBrightness(backlight);
-  });
-}
 
+            var userSettings = `{"description":${JSON.stringify(qrDescription)}, "qrCodeImgStr":${JSON.stringify(imgStr)}, "preventBrightnessChangeOnTouch":${document.getElementById("preventBrightnessChangeOnTouch").checked}, "boostBacklight":${document.getElementById("boostBacklight").checked}, "stayOn":${document.getElementById("stayOn").checked}, "hideDescription":${document.getElementById("hideDescription").checked}}`;
 
-if (qrData.boostBacklight) {
-  Bangle.setLCDBrightness(1);
-}
-if (qrData.stayOn) {
-  Bangle.setLCDTimeout(0);
-}
-g.clear(1).setColor(1,1,1).setBgColor(0,0,0);
-g.fillRect(0,0,g.getWidth()-1,g.getHeight()-1);
-g.drawImage(qrImg,(g.getWidth()-qrImg[0])/2,(g.getHeight()-qrImg[1])/2);
-if (!qrData.hideDescription) {
-  g.setFontAlign(0,0).setFont("6x8").setColor(0,0,0);
-  g.drawString(qrData.description,g.getWidth()/2,g.getHeight()-(g.getHeight()-qrImg[1])/4);
-}
-g.setColor(1,1,1);
-`;
-
-var userSettings = `{"description":${JSON.stringify(qrDescription)}, "qrCodeImgStr":${JSON.stringify(imgStr)}, "preventBrightnessChangeOnTouch":${document.getElementById("preventBrightnessChangeOnTouch").checked}, "boostBacklight":${document.getElementById("boostBacklight").checked}, "stayOn":${document.getElementById("stayOn").checked}, "hideDescription":${document.getElementById("hideDescription").checked}}`;
-
+            //only sending custom JSON object with settings and qrCode. app code is static now in its own js file.
             sendCustomizedApp({
                 storage:[
 		    {name:"qrcode.json", url:"qrcode.json", content:userSettings}
